# fx-pipeline

./: .gitignore  DESIGN_NOTE.md  README.md  config.py  function_app.py  pipeline.py  pyproject.toml  requirements.txt  test_extract.py  test_load.py  test_transform.py  validate.py
.github/workflows/: ci_cd.yml
etl/: extract.py  load.py  load_azure.py  transform.py
orchestration/: adf_pipeline.json  adf_trigger.json
orchestration/azure_function/: __init__.py  function.json
queries/: example_queries.sql
synapse/: setup.sql
tests/: conftest.py  test_extract.py  test_load.py  test_transform.py
